  (task #10141)
* core: add new option weechat.look.time_format to customize default format
  for date/time displayed (localized date by default), add function
  weechat_util_get_time_string in plugin API (patch #6914)
* core: use arguments for infolist "nicklist" to return only one nick or group
* gui: fix bug with global history, reset pointer to last entry after each user
  input (bug #28754)
* api: add "version_number" for function info_get to get WeeChat version as
  number
* api: add functions "string_encode_base64" and "string_decode_base64",, fix
  bug with base64 encoding
* api: add missing infos in functions buffer_get_integer / buffer_get_string
  and in buffer infolist
* api: add description of arguments for functions hook_info and hook_infolist
* api: fix function "color" in Lua script API
* api: fix "inactivity" value when no key has been pressed since WeeChat started
  (bug #28930)
* irc: add SASL authentication, with PLAIN and DH-BLOWFISH mechanisms
  (task #8829)
* irc: fix crash with SSL connection if option ssl_cert is set (bug #28752)
* irc: fix bug with SSL connection (fails sometimes when ssl_verify is on)
  (bug #28741)
* irc: fix PART message received on Undernet server (bug #28825)
* irc: add option irc.network.connection_timeout (timeout between TCP connection
  to server and reception of message 001)
* irc: add options irc.look.smart_filter_join and irc.look.smart_filter_quit
* irc: apply smart filter only on channels, not private buffers (bug #28841)
* irc: add option irc.look.item_channel_modes_hide_key to hide channel key
  in channel modes (bug #23961)
* irc: add option irc.look.item_nick_prefix
* irc: add command /map
* irc: add missing commands 276, 343
* irc: fix compilation with old GnuTLS versions (bug #28723)
* logger: allow date format in logger options path and mask (task #9430)
* xfer: fix crash when purging old xfer chats (bug #28764)
* xfer: add signal "xfer_ended" (patch #7081)

Version 0.3.1.1 (2010-01-31)